# PhaseNet-TF

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/experiment/: inference_train_bench.yaml  production_default_expanse.yaml
dataset/: catalog.csv  meta_info.txt  phase_picks.csv  stations.json
example_data/: ._example  catalog.csv  meta_info.txt  phase_picks.csv  stations.json
src/data/components/: ai4eps.py
src/models/callbacks/: visualize.py
