[tool.poetry]
authors = ["ziyi xi <ziyixi@mail.ustc.edu.cn>"]
description = "PhaseNet-TF: Advanced Seismic Arrival Time Detection via Deep Neural Networks in the Spectrogram Domain, Leveraging Cutting-Edge Image Segmentation Approaches"
license = "MIT"
name = "phasenet-tf"
readme = "README.md"
version = "0.2.0"

[tool.poetry.dependencies]
h5py = "^3.11.0"
httpx = "^0.27.0"
hydra-colorlog = "^1.2.0"
hydra-core = "^1.3.2"
hydra-submitit-launcher = "^1.2.0"
ipykernel = "^6.29.5"
joblib = "^1.4.2"
lightning = "^2.3.3"
matplotlib = "^3.9.1"
nnaudio = "^0.3.3"
numpy = "^2.0.1"
obspy = "^1.4.1"
pandas = "^2.2.2"
pylint = "^3.2.6"
pyrootutils = "^1.0.4"
python = "^3.12"
rich = "^13.7.1"
scipy = "^1.14.0"
segmentation-models-pytorch = "^0.3.3"
sqlalchemy = "<2.0"
torch = "^2.4.0"
wandb = "^0.17.5"
regex = "^2024.11.6"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
